# nusselt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/nusselt/: __init__.py
src/nusselt/architectures/atd/: __init__.py  atd.py
src/nusselt/architectures/camixersr/: __init__.py  camixersr.py
src/nusselt/architectures/compact/: SRVGG.py  __init__.py
src/nusselt/architectures/cugan/: __init__.py  cugan.py
src/nusselt/architectures/dat/: __init__.py  dat.py
src/nusselt/architectures/ditn/: __init__.py  ditn_real.py
src/nusselt/architectures/esrgan/: __init__.py  esrgan.py
src/nusselt/architectures/omnisr/: __init__.py  esa.py  layernorm.py  omnisr.py  osa.py  osag.py  pixelshuffle.py
src/nusselt/architectures/plksr/: __init__.py  plksr.py
src/nusselt/architectures/rgt/: __init__.py  rgt.py
src/nusselt/architectures/span/: __init__.py  span.py
src/nusselt/architectures/swinir/: __init__.py  swinir.py
src/nusselt/architectures/utils/: size_req.py
src/nusselt/registry/: __init__.py  architecture_registry.py  default_registry.py  model_descriptor.py
src/nusselt/transformers/: __init__.py  image_transformer.py  model_loader.py
src/nusselt/utilities/: canonicalize.py  state.py
tests/: __init__.py  test_atd.py  test_camixersr.py  test_compact.py  test_cugan.py  test_dat.py  test_ditn.py  test_esrgan.py  test_omnisr.py  test_plksr.py  test_rgt.py  test_span.py  test_swinir.py  util.py
tests/__snapshots__/: test_atd.ambr  test_camixersr.ambr  test_compact.ambr  test_cugan.ambr  test_dat.ambr  test_ditn.ambr  test_esrgan.ambr  test_omnisr.ambr  test_plksr.ambr  test_rgt.ambr  test_span.ambr  test_swinir.ambr
