[tool.poetry]
name = "nusselt"
version = "0.1.0"
description = "Dependency for recognizing and executing Image Super-Resolution PyTorch architectures"
authors = ["Sekiju", "umzi"]
readme = "README.md"
packages = [{ include = "nusselt", from = "src" }]
homepage = "https://github.com/scanlate-wiki/nusselt"

[tool.poetry.dependencies]
python = ">=3.10,<4"
einops = "^0.7.0"
safetensors = "^0.4.2"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
torch = "2.1.2"
torchvision = "0.16.2"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
pytest = "^7.4.4"
gdown = "^5.0.1"
pre-commit = "^3.6.0"
syrupy = "^4.6.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
